--- a/config/nacos/ruoyi-gateway.yml
+++ b/config/nacos/ruoyi-gateway.yml
@@ -26,6 +26,7 @@ security:
       - /auth/smsLogin
       - /auth/xcxLogin
       - /auth/register
+      - /auth/tenant/list
       - /resource/sms/code
       - /*/v3/api-docs
       - /csrf
@@ -54,7 +55,7 @@ spring:
         - id: ruoyi-gen
           uri: lb://ruoyi-gen
           predicates:
-            - Path=/code/**
+            - Path=/tool/**
           filters:
             - StripPrefix=1
         # 系统模块
