--- a/config/nacos/ruoyi-gateway.yml
+++ b/config/nacos/ruoyi-gateway.yml
@@ -62,14 +62,7 @@ spring:
         - id: ruoyi-system
           uri: lb://ruoyi-system
           predicates:
-            - Path=/system/**
-          filters:
-            - StripPrefix=1
-        # 监控模块
-        - id: ruoyi-monitor
-          uri: lb://ruoyi-system
-          predicates:
-            - Path=/monitor/**
+            - Path=/system/**,/monitor/**
           filters:
             - StripPrefix=1
         # 资源服务
