--- a/ruoyi-common/ruoyi-common-sentinel/pom.xml
+++ b/ruoyi-common/ruoyi-common-sentinel/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.dromara</groupId>
         <artifactId>ruoyi-common</artifactId>
-        <version>1.6.0</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
