--- a/ruoyi-visual/ruoyi-seata-server/pom.xml
+++ b/ruoyi-visual/ruoyi-seata-server/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.dromara</groupId>
         <artifactId>ruoyi-visual</artifactId>
-        <version>1.6.0</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ruoyi-seata-server</artifactId>
