--- a/ruoyi-visual/ruoyi-sentinel-dashboard/pom.xml
+++ b/ruoyi-visual/ruoyi-sentinel-dashboard/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.dromara</groupId>
         <artifactId>ruoyi-visual</artifactId>
-        <version>1.6.0</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>ruoyi-sentinel-dashboard</artifactId>
