--- a/ruoyi-visual/ruoyi-xxl-job-admin/pom.xml
+++ b/ruoyi-visual/ruoyi-xxl-job-admin/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.dromara</groupId>
 		<artifactId>ruoyi-visual</artifactId>
-		<version>1.6.0</version>
+		<version>${revision}</version>
 	</parent>
 	<artifactId>ruoyi-xxl-job-admin</artifactId>
 	<packaging>jar</packaging>
