--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <description>RuoYi-Cloud-Plus微服务系统</description>
 
     <properties>
-        <revision>2.X-BETA</revision>
+        <revision>2.0.0-SNAPSHOT</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
