--- a/config/nacos/datasource.yml
+++ b/config/nacos/datasource.yml
@@ -30,7 +30,7 @@ spring:
       # 性能分析插件(有性能损耗 不建议生产环境使用)
       p6spy: true
       # 开启seata代理，开启后默认每个数据源都代理，如果某个不需要代理可单独关闭
-      seata: true
+      seata: ${seata.enabled}
       # 严格模式 匹配不到数据源则报错
       strict: true
       hikari:
@@ -50,8 +50,3 @@ spring:
         connectionTestQuery: SELECT 1
         # 多久检查一次连接的活性
         keepaliveTime: 30000
-
-# seata配置
-seata:
-  # 关闭自动代理
-  enable-auto-data-source-proxy: false
