fix 修复 服务未添加 common-security 模块导致异常拦截器不生效问题

--- a/ruoyi-modules/ruoyi-gen/pom.xml
+++ b/ruoyi-modules/ruoyi-gen/pom.xml
@@ -66,6 +66,11 @@
             <artifactId>ruoyi-common-seata</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-common-security</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
