update satoken 1.34.0 => 1.35.0.RC 优化过期配置 支持多端token自定义有效期

--- a/config/nacos/application-common.yml
+++ b/config/nacos/application-common.yml
@@ -171,8 +171,9 @@ sa-token:
   token-name: Authorization
   # token有效期 设为一天 (必定过期) 单位: 秒
   timeout: 86400
-  # token临时有效期 (指定时间无操作就过期) 单位: 秒
-  activity-timeout: 1800
+  # 多端不同 token 有效期 可查看 LoginHelper.loginByDevice 方法自定义
+  # token最低活跃时间 (指定时间无操作就过期) 单位: 秒
+  active-timeout: 1800
   # 开启内网服务调用鉴权
   check-same-token: true
   # Same-Token的有效期 (单位: 秒)(默认一天）
