update 优化 !pr94 代码结构

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -492,13 +492,13 @@ services:
       - /docker/grafana/grafana.ini:/etc/grafana/grafana.ini
       - /docker/grafana:/var/lib/grafana
     network_mode: "host"
+
   shardingproxy:
-    image: apache/shardingsphere-proxy
+    image: apache/shardingsphere-proxy:5.3.2
     container_name: shardingsphere-proxy
-    restart: always
     command: server /data
     ports:
-      - 13307:3307
+      - "3307:3307"
     volumes:
       - /docker/shardingproxy/conf:/opt/shardingsphere-proxy/conf
       - /docker/shardingproxy/ext-lib:/opt/shardingsphere-proxy/ext-lib
