fix 修复 动态设置 token 有效期不生效问题

--- a/config/nacos/application-common.yml
+++ b/config/nacos/application-common.yml
@@ -174,6 +174,8 @@ sa-token:
   # 多端不同 token 有效期 可查看 LoginHelper.loginByDevice 方法自定义
   # token最低活跃时间 (指定时间无操作就过期) 单位: 秒
   active-timeout: 1800
+  # 允许动态设置 token 有效期
+  dynamic-active-timeout: true
   # 开启内网服务调用鉴权
   check-same-token: true
   # Same-Token的有效期 (单位: 秒)(默认一天）
