--- a/config/nacos/ruoyi-job.yml
+++ b/config/nacos/ruoyi-job.yml
@@ -26,8 +26,8 @@ xxl:
     executor:
       # 执行器AppName：执行器心跳注册分组依据；为空则关闭自动注册
       appname: ${spring.application.name}-executor
-      # 执行器端口号 执行器从19901开始往后写
-      port: 9901
+      # 29203 端口 随着主应用端口飘逸 避免集群冲突
+      port: 2${server.port}
       # 执行器注册：默认IP:PORT
       address:
       # 执行器IP：默认自动获取IP
