!98 vue 版本功能迁移：客户端管理，第三方认证，api加解密，登录认证重构
* add 新增 sys_client 客户端配置管理 ;

--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -40,6 +40,7 @@
         <module>ruoyi-common-encrypt</module>
         <module>ruoyi-common-tenant</module>
         <module>ruoyi-common-websocket</module>
+        <module>ruoyi-common-social</module>
     </modules>
 
     <artifactId>ruoyi-common</artifactId>
