--- a/config/nacos/application-common.yml
+++ b/config/nacos/application-common.yml
@@ -207,9 +207,9 @@ springdoc:
   api-docs:
     # 是否开启接口文档
     enabled: true
-  swagger-ui:
-    # 持久化认证数据
-    persistAuthorization: true
+#  swagger-ui:
+#    # 持久化认证数据
+#    persistAuthorization: true
   info:
     # 标题
     title: '标题：RuoYi-Cloud-Plus微服务权限管理系统_接口文档'
