* update springboot 3.0.8 => 3.1.2 * update springcloud 2022.0.2 => 2022.0.4 * update springcloud-alibaba 2022.0.0.0-RC2 => 2022.0.0.0 * update spring-mybatis 3.0.1 => 3.0.2 * update easyexcel 3.3.1 => 3.3.2 * update hutool 5.8.18 => 5.8.20 * update redisson 3.20.1 => 3.23.1 * update dynamic-ds 4.1.1 => 4.1.2 * update mapstruct-plus 1.3.1 => 1.3.5 * update aws-java-sdk-s3 1.12.400 => 1.12.517 * update maven-surefire-plugin 3.0.0 => 3.1.2

--- a/config/nacos/application-common.yml
+++ b/config/nacos/application-common.yml
@@ -91,7 +91,7 @@ spring:
       # password:
       database: 0
       timeout: 10s
-      ssl: false
+      ssl.enable: false
 
 # redisson 配置
 redisson:
